--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,5 +38,5 @@ set (CMAKE_CXX_FLAGS_DEBUG "-g -ggdb -O0")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 
-
-add_subdirectory (src)
+add_subdirectory (src/libcurlcpp)
+add_subdirectory (src/main)
